# INIParser

./: .gitignore  CMakeLists.txt  Doxyfile  INIParser.h  INIParser.sln  INIParser.vcxproj  INIParser.vcxproj.filters  README.md
.github/workflows/: ci.yml
Tests/: CMakeLists.txt  main.cpp
docs/: _i_n_i_converter_8h_source.html  _i_n_i_parser_8cpp_source.html  _i_n_i_parser_8h_source.html  annotated.html  classes.html  classutility_1_1_i_n_i_parser-members.html  classutility_1_1_i_n_i_parser.html  classutility_1_1ini_1_1_i_n_i_parser-members.html  classutility_1_1ini_1_1_i_n_i_parser.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  index.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js
include/: INIConverter.h  INIParser.h
src/: INIConverter.h  INIParser.cpp  INIParser.h
